Adicionado Token no swagger e requisitos
