# ISI TP2/server/controller/emprestimo_controller.js
@@ -1,4 +1,6 @@
-const Emprestimo = require("../db/emprestimo")
+const Emprestimo = require("../db/emprestimo");
+const Utilizador = require("../db/user");
+const Livro = require("../db/livro")
 
 exports.MakeEmprestimo_post = async (req,res,next)=>{
     try {
@@ -6,20 +8,38 @@ exports.MakeEmprestimo_post = async (req,res,next)=>{
             res.json({message: "Conteúdo não pode estar vazio!"});
 
         // verificar se os campos foram preeenchidos
-        if((req.body.data === "") || (req.body.data_devolucao === "") || (req.body.Livro_id === ""))
+        if((req.body.date === "") || (req.body.data_devolucao === "") || (req.body.Livro_id === ""))
             res.json({message: "Campos Não preenchidos"});
     
         const { data, data_devolucao, Livro_id} = req.body;
 
         if(!req.params) return res.status(404).json({message:"bad request"});
+        const{Utilizador_id} = req.params;
 
-        const{Utilizador_id} = req.body;
-        
-        await Emprestimo.MakeEmprestimo(data, data_devolucao, Utilizador_id, Livro_id, (err,data)=>{
+        await Utilizador.GetUtilizadorInfo(Utilizador_id,async (err,date) => {
             if (err)
                 res.status(500).json({ message: err.message || "Ocorreu algum erro ao fazer a requisição" });
-            else 
-                res.status(200).json({message:"Requisição feita com Sucesso"});
+            if(date.length === 0){
+                return res.status(500).json({ message: "O Utilizador que inseriu não existe" });
+            }
+            else{
+                await Livro.GetLivroInfo(Livro_id,async (err,date) => {
+                    if (err)
+                        res.status(500).json({ message: err.message || "Ocorreu algum erro ao fazer a requisição" });
+                    if(date.length === 0){
+                        return res.status(500).json({ message: "O Livro que inseriu não existe" });
+                    }
+                    else{
+                        await Emprestimo.MakeEmprestimo(data, data_devolucao, Utilizador_id, Livro_id, (err,data)=>{
+                            if (err)
+                                res.status(500).json({ message: err.message || "Ocorreu algum erro ao fazer a requisição" });
+                            else 
+                                res.status(200).json({message:"Requisição feita com Sucesso"});
+                        });
+                    }
+                });
+            }
+
         });
     } catch (error) {
         console.log(error);
