# ISI TP2/server/routes/user/user.js
@@ -1,4 +1,5 @@
 const utilizador = require("../../controller/user_controller");
+const emprestimo = require("../../controller/emprestimo_controller");
 var router = require("express").Router();
 
 
@@ -23,15 +24,13 @@ router.delete("/delete/:id",utilizador.DeleteUtilizador_delete);
 //login de um utilizador
 router.post("/login",utilizador.GetLogin_post);
 
-<<<<<<< Updated upstream
-=======
-router.post('/token', utilizador.signupValidation);
-
 //post de um  novo emprestimo
 router.post("/make/:Utilizador_id", emprestimo.MakeEmprestimo_post);
 
 //delete de um emprestimo do utilizador atual
 router.post("/cancel/:Utilizador_id", emprestimo.CancelEmprestimo_post);
 
->>>>>>> Stashed changes
+//post da verificação do registo
+router.post('/token', utilizador.signupValidation);
+
 module.exports = router;
